hovers on mobile hopefully fixed

--- a/frontend/src/css/_small-default.scss
+++ b/frontend/src/css/_small-default.scss
@@ -63,15 +63,17 @@ body {
     background: $color-dark-light;
     color: white;
 
-    &:hover {
-        opacity: 0.7;
-        color: $color-dark-strong;
-        background-color: $color-bright-medium;
-        -webkit-transition: 0.5s;
-        -moz-transition:    0.5s;
-        -ms-transition:     0.5s;
-        -o-transition:      0.5s;
-        transition:         0.5s;
+    @media (hover: hover) { 
+        &:hover {
+            opacity: 0.7;
+            color: $color-dark-strong;
+            background-color: $color-bright-medium;
+            -webkit-transition: 0.5s;
+            -moz-transition:    0.5s;
+            -ms-transition:     0.5s;
+            -o-transition:      0.5s;
+            transition:         0.5s;
+        }
     }
 }
 
@@ -110,10 +112,12 @@ header {
             margin: 0.2em 0.1em;
             box-shadow: 0 0 8px 0 rgba($color-dark-light, .7);
     
-            &:hover {
-                box-shadow: 0 0 8px 4px rgba($color-bright-light, .7);
-                color: $color-bright-light;
-                transition: 0.5s;
+            @media (hover: hover) { 
+                &:hover {
+                    box-shadow: 0 0 8px 4px rgba($color-bright-light, .7);
+                    color: $color-bright-light;
+                    transition: 0.5s;
+                }
             }
         }
 
@@ -121,12 +125,14 @@ header {
             background-color: rgba($color-bright-light, .7);
             color: darken(black, 20%);
             text-shadow: 0 0 3px white;
-            
-            &:hover {
-                color: white;
-                box-shadow: 0 0 8px 4px rgba(white, .7);
-                transition: 0.5s;
-                text-shadow: 0 0 3px black;
+
+            @media (hover: hover) { 
+                &:hover {
+                    color: white;
+                    box-shadow: 0 0 8px 4px rgba(white, .7);
+                    transition: 0.5s;
+                    text-shadow: 0 0 3px black;
+                }
             }
         }
     }
@@ -155,10 +161,12 @@ header {
             margin: 0.2em 0.1em;
             box-shadow: 0 0 8px 0 rgba($color-dark-light, .7);
     
-            &:hover {
-                box-shadow: 0 0 8px 4px rgba($color-bright-medium, .7);
-                color: $color-bright-medium;
-                transition: 0.5s;
+            @media (hover: hover) { 
+                &:hover {
+                    box-shadow: 0 0 8px 4px rgba($color-bright-medium, .7);
+                    color: $color-bright-medium;
+                    transition: 0.5s;
+                }
             }
         }
 
@@ -167,11 +175,13 @@ header {
             color: darken(black, 20%);
             text-shadow: 0 0 3px white;
             
-            &:hover {
-                color: white;
-                box-shadow: 0 0 8px 4px rgba(white, .7);
-                transition: 0.5s;
-                text-shadow: 0 0 3px black;
+            @media (hover: hover) { 
+                &:hover {
+                    color: white;
+                    box-shadow: 0 0 8px 4px rgba(white, .7);
+                    transition: 0.5s;
+                    text-shadow: 0 0 3px black;
+                }
             }
         }
     }
@@ -439,9 +449,11 @@ img {
 .repe-artist {
     cursor: pointer;
 
-    &:hover {
-        font-weight: 1000;
-        text-shadow: 0 0 3px white;
+    @media (hover: hover) { 
+        &:hover {
+            font-weight: 1000;
+            text-shadow: 0 0 3px white;
+        }
     }
 
     &.is-active {
@@ -452,9 +464,11 @@ img {
 td.repe-name {
     cursor: pointer;
 
-    &:hover {
-        color: black;
-        background-color: white !important;
+    @media (hover: hover) { 
+        &:hover {
+            color: black;
+            background-color: white !important;
+        }
     }
 }
 
@@ -512,8 +526,10 @@ td.repe-name {
     border-radius: 4px;
     background-color: $color-inco-medstrong;
 
-    &:hover {
-        background-color: $color-bright-medium;
+    @media (hover: hover) { 
+        &:hover {
+            background-color: $color-bright-medium;
+        }
     }
 }
 
@@ -578,9 +594,11 @@ figcaption {
         background-color: $color-inco-light;
     }
 
-    &:hover {
-        cursor: pointer;
-        background-color: $color-inco-medstrong;
+    @media (hover: hover) { 
+        &:hover {
+            cursor: pointer;
+            background-color: $color-inco-medstrong;
+        }
     }
 }
 
@@ -595,11 +613,13 @@ figcaption {
     justify-content: center;
     background-color: $color-bright-medlight;
 
-    &:hover {
-        cursor: pointer;
-        background-color: $color-bright-medium;
-        box-shadow: 0 0 8px 4px rgba($color-dark-strong, .7);
-        transition: 0.5s;
+    @media (hover: hover) { 
+        &:hover {
+            cursor: pointer;
+            background-color: $color-bright-medium;
+            box-shadow: 0 0 8px 4px rgba($color-dark-strong, .7);
+            transition: 0.5s;
+        }
     }
 
     .soundcloud-title {
